# rememberme

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  vetur.config.js
config/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .eslintrc.js  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  index.css
frontend/src/api/: common.ts  index.ts  schema.ts  types.ts
frontend/src/api/resources/phrases/: index.ts  types.ts
frontend/src/components/: PhraseCard.vue  PhrasesList.vue
frontend/src/router/: index.ts
frontend/src/views/: Home.vue
phrases/: admin.py  models.py  serializers.py  urls.py  views.py
phrases/migrations/: 0001_initial.py  0002_auto_20210410_1109.py  0003_auto_20210410_1301.py
templates/: base-vue.html  base.html
tests/: test_rememberme.py
